[package]
name = "eywa-errors"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
