[package]
name = "eywa-errors"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
thiserror = "2.0.17"
serde = "1.0.228"
serde_json = "1.0"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.39"
sea-orm = "1.1.19"
tracing = "0.1.44"
utoipa = "5.4.0"
tokio = { version = "1.48.0", features = ["rt"] }
